feat(eval): add hierarchical diagnostic reports